--- a/modules/gflacso_graduados/templates/template_sets/css/general.css
+++ b/modules/gflacso_graduados/templates/template_sets/css/general.css
@@ -89,16 +89,16 @@ input[type="checkbox"] + label {
   font-weight: normal;
 }
 
-
-.kv-file-content {
-  margin-bottom: 15px;
-}
-
 .kv-file-content img,
 .kv-file-content object
 {
   max-width: 150px !important;
   height: auto !important;
+}
+
+.kv-file-content .file-preview-text
+{
+  max-width: 180px !important;
 }
 
 .krajee-default.file-preview-frame {
